# ORBIT

./: CHANGELOG.md  README.md  licence.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/orbit/: __init__.py  cli.py  core.py  duplicate.py  errors.py  executor.py  exif.py  journal.py  path_generator.py  reporter.py  scanner.py
tests/: __init__.py  conftest.py  test_core.py  test_duplicate.py  test_executor.py  test_exif.py  test_journal.py  test_path_generator.py  test_scanner.py
