[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orbit-photos"
version = "0.1.0"
description = "Organized Repositories Based on Images Timing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Béranger THOMAS", email = "beranger.thomas@proton.me"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
]
dependencies = [
    "exifread>=2.3.2",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/berangerthomas/ORBIT"
Repository = "https://github.com/berangerthomas/ORBIT"
Issues = "https://github.com/berangerthomas/ORBIT/issues"

[project.scripts]
orbit = "orbit.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "black>=23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/orbit"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
